<resources>

    <string name="app_name">Test 1</string>
    <string name="vul_NotFound">Data not found</string>
    <string name="vul_addPerson">Add Person</string>
    <string name="vul_viewList">View List</string>
    <string name="vul_ID">id</string>
    <string name="vul_PersonName">Name</string>
    <string name="vul_PersonLasName">Last Name</string>
    <string name="vul_PersonPhone">Phone</string>
    <string name="vul_PersonEmail">Email</string>
    <string name="vul_PersonAddress">Address</string>
    <string name="vul_PersonCountry">Origin Country</string>
    <string name="vul_PersonDestinationCountry">Destination Country</string>
    <string name="vul_PersonFlightNumber">Flight Number</string>
    <string name="vul_PersonFlightDate">Flight Date</string>
    <string name="vul_Save">Save</string>
    <string name="vul_Delete">Delete</string>
    <string name="vul_Cancel">Cancelar</string>
    <string name="vul_CloseDialogTitle">Close App</string>
    <string name="vul_Yes">Yes</string>
    <string name="vul_No">No</string>
    <string name="vul_CloseDialog">Close App?</string>
    <string name="vul_Succesfully">Succesfully</string>
    <string name="vul_Wrong">Wrong</string>
    <string name="vul_WarningID">ID is required</string>
    <string name="vul_WarningName">Name is required</string>
    <string name="vul_WarningLastName">Last name is required</string>
    <string name="vul_WarningPhone">Phone is required</string>
    <string name="vul_WarningEmail">Email is required</string>
    <string name="vul_WarningAddress">Address is required</string>
    <string name="vul_WarningCountry">Origin Country is required</string>
    <string name="vul_WarningCountryDestination">Country destination is requiered</string>
    <string name="vul_WarningFlightNumber">Flight number is requiered</string>
    <string name="vul_WarningFlightDate">Flight date is requiered</string>
    <string name="vul_WarningPhoneNumber">Phone number is not valid</string>
    <string name="vul_WarningDateFormat">Date format is not valid use DD/MM/YYYY</string>
    <string name="vul_ASKDelete">Delete contact?</string>
    <string name="vul_ASKConfirmation">Continue</string>
    <string name="vul_ContactExists">Contact already exists</string>
    <string name="vul_CustomView">View Custom List</string>
    <string name="far_farm_title_name">Pharmacy</string>
    <string name="far_patient_txt">Patient</string>
    <string name="far_medicine_txt">Medicine</string>
    <string name="far_quantity_input">Quantity</string>
    <string name="far_Add_button">Add medicine</string>
    <string name="far_price_Input">Price</string>
    <string name="far_medicine_Input">Medicine name</string>
    <string name="far_name_input">Name</string>
    <string name="far_id_input">Identity</string>
    <string name="far_input_lastname">Lastname</string>
    <string name="far_input_phone">Phone number</string>
    <string name="far_email_input">Email</string>
    <string name="far_address_input">Address</string>
    <string name="far_country_input">Country</string>
    <string name="far_Ins_new_Patient">Insert patient</string>
    <string name="far_success_addMedicine">Medicine added</string>
    <string name="far_txt_failed">Something wrong</string>
    <string name="app_name">Containers Dorian</string>
    <string name="nav_ContainerCont">Container Control</string>
    <string name="nav_ListCont">List Containers</string>
    <string name="nav_containerNum">Container number</string>
    <string name="nav_nomPer">Person name</string>
    <string name="day">dd/mm/yyyy</string>
    <string name="nav_dayTxt">Day control</string>
    <string name="nav_hour">Hour maintenance</string>
    <string name="nav_typeCont">Container Type</string>
    <string name="nav_tempCont">Container temperatue</string>
    <string name="nav_weight">Contaier weight</string>
    <string name="nav_Product">Product in the container</string>

    //sppiner
    <string-array name="datos">
        <item>Seco</item>
        <item>Humedo</item>

    </string-array>
    //Crud

    <string name="containerNotF">Container not found</string>
    <string name="InsertC">Insert Container</string>
    <string name="delCont">Delete container</string>
    <string name="updCont">Update Container</string>
    <string name="LstConrt">List Containers</string>
    <string name="msgSucces">Succes insert</string>
    <string name="msgDel">Succes delete</string>
    <string name="msgUpd">Succes update</string>
    <string name="msgErr">Error missing data</string>
    <string name="btn_insert_Cont">Regis container</string>

    //succes msg
</resources>